bluejay-validator/tests/snapshots/executable_integration_test__error@field_selection_merging_fragments.graphql.snap
---
source: bluejay-validator/tests/executable_integration_test.rs
expression: formatted_errors
input_file: bluejay-validator/tests/test_data/executable/error/field_selection_merging_fragments.graphql
---
Error: Fields in selection set do not merge due to incompatible types
    ╭─[ field_selection_merging_fragments.graphql:3:7 ]
    │
  3 │ ╭─▶   pet {
    ┆ ┆   
  6 │ ├─▶   }
    │ │         
    │ ╰───────── Fields in selection set do not merge
    │ 
 11 │         someValue: name
    │                    ──┬─  
    │                      ╰─── First field has type String!
    │ 
 17 │         someValue: nickname
    │                    ────┬───  
    │                        ╰───── Second field has type String
────╯

Error: Fields in selection set do not merge due to unequal field names
    ╭─[ field_selection_merging_fragments.graphql:3:7 ]
    │
  3 │ ╭─▶   pet {
    ┆ ┆   
  6 │ ├─▶   }
    │ │         
    │ ╰───────── Fields in selection set do not merge
    │ 
 11 │         someValue: name
    │                    ──┬─  
    │                      ╰─── First field
    │ 
 17 │         someValue: nickname
    │                    ────┬───  
    │                        ╰───── Second field
────╯
